--- a/Wengridient.html
+++ b/Wengridient.html
@@ -69,7 +69,7 @@
 				<br>
 				<p>
                 <strong>Wengridient</strong> Wengridient is formed when people begin to realize that organic foods are good because they do not contain chemicals and are better for the body. For this reason the creative stand is to make it easier for households, restaurants and hotels to meet their needs for organic food such as vegetables, fruits, nuts, etc. Wengridient also offers delivery services for each product sold.
-                    <a href="Contact.html"></a>
+                    <a href="Contact.html" class="green-anchor">Wengridient Contacts</a>
 				</p>
 			</div>
 			</div>
