--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
                     <div class="right text">
                         <h2>What is Wengridient</h2>
 						<p>We are a business entity that sells daily food products and also daily delivery services for our products. Our vision makes it easy for communities or organizations to meet their needs.</p>
-						<a href="Wengridient.html"><button  class="read-btn">read more</button></a>
+						<a href="Wengridient.html"><button  class="read-btn">Read more</button></a>
 					</div>
 				</div>
 				<div class="features">
@@ -76,7 +76,7 @@
 					<div class="left">
 						<h2 style="margin-bottom:10px;">Our Products Are Guaranteed Organic</h2>
 						<p> Our products are guaranteed organic, all products we sell are guaranteed organic and of high quality. We always keep the soil in our fields free of chemical fertilizers and guarantee that people are 100% organic and fresh every day.</p>
-						<a href="Why-organic.html"><button class="read-btn">Why organic?</button></a>
+						<a href="Why-organic.html"><button class="read-btn">What is organic?</button></a>
 					</div>
 				</div>
 				<div class="features">
@@ -87,7 +87,7 @@
 					<div class="right text">
                             <h2 style="margin-bottom:10px;">Daily Delivery</h2>
 						<p>Our services to work on all the products you buy directly to your home or location. We make our own shipments so that the safety and quality of products are maintained.</p>
-						<a href="delivery-info.html"><button class="read-btn">delivery info</button></a>
+						<a href="delivery-info.html"><button class="read-btn">Delivery info</button></a>
 					</div>
 				</div>
 			</div>
