--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                         console.log(orderFiltered+name+address+phoneNumber+coupon);
                         alert('Now you will be redirected to Gmail click send to order\n and wait for confirmation calls from the owner');
                         //for desktop 
-                        if($(this).attr('id')=='desktop'){window.location.href='https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to=pratamahantama@gmail.com&subject%3DChildminding+query&body='+orderFiltered+totalCost+name+address+phoneNumber;}
+                        if($(this).attr('id')=='desktop'){window.location.href='https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to=wengredient@gmail.com&subject%3DChildminding+query&body='+orderFiltered+totalCost+name+address+phoneNumber;}
                         //for mobile
-                        else{window.location.href='mailto:pratamahantama@gmail.com?subject%3DChildminding+query&body='+orderFiltered+totalCost+name+address+phoneNumber;}
+                        else{window.location.href='mailto:wengredient@gmail.com?subject%3DChildminding+query&body='+orderFiltered+totalCost+name+address+phoneNumber;}
                     })
 
                     
@@ -109,7 +109,7 @@
                         <li class="category-li" id="vegetables"><a class="first" id='vegetA'>Vegetables</a></li>
                         <li class="category-li" id="fruits"><a id="fruitA">Fruits</a></li>
                         <li class="category-li" id="bean"><a id="beanA">Beans</a></li>
-                        <li class="category-li" id="seasonings"><a id="seasonA" class="last">Spice & Seasonig</a></li>
+                        <li class="category-li" id="seasonings"><a id="seasonA" class="last">Spice & Seasoning</a></li>
                     </ul>
                     <h3>Your Cart <button class='cItem' id='cItemasd'>Clear</button></h3>
                     
