--- a/recipe.html
+++ b/recipe.html
@@ -102,7 +102,7 @@
 						
 					</p>
 					
-					<a href="recepi-list"><button class="read-btn">Back to Recipe List</button></a>
+					<a href="recipeList.html"><button class="read-btn">Back to Recipe List</button></a>
 						`;
 						$('.delivery').append(newElement);
 					})
