--- a/Contact.html
+++ b/Contact.html
@@ -60,17 +60,17 @@
 				<br>
 				<div class="sub-contact">
 					<div class="contact">
-						<p><img src="images/emaillog.PNG">wengredient@gmail.com</p>
+						<p><img src="images/emaillog.png">wengredient@gmail.com</p>
 					</div>
 				</div>
 				<div class="sub-contact">
 					<div class="contact">
-						<p><img src="images/faclog.PNG">Wengredient</p>
+						<p><img src="images/faclog.png">Wengredient</p>
 					</div>
 				</div>
 				<div class="sub-contact">
 					<div class="contact">
-						<p><img src="images/instagram.PNG">Wengredient</p>
+						<p><img src="images/instagram.png">Wengredient</p>
 					</div>
 				</div>
 			</div>
