update contact logo overload

--- a/Contact.html
+++ b/Contact.html
@@ -55,7 +55,7 @@
 			<div class="profile">
 				<h2>Contact</h2>
 				<div>
-				<a href="#"><img src="images/logo.PNG"></a>
+				<a href="#"><img class="contact-logo" src="images/logo.PNG"></a>
 				</div>
 				<br>
 				<div class="sub-contact">
