--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,13 @@
         <script src="javascript/jquery-3.4.0.min.js"></script>
         <script>
                  $(document).ready(function() {
-
+                    $('#menubar').click(function(){
+                        let menu = document.getElementById('myLinks');
+                        if(menu.style.display == "none")
+                        {menu.style.display = "block"}
+                        else 
+                        {menu.style.display= "none"}
+                    })
                 });
 
             </script>
