--- a/post.html
+++ b/post.html
@@ -6,7 +6,6 @@
         <title>Hantexts</title>
     </head>
     <body>
-        <div class="container">
             <header>
                     <div style="width: 200px; float:right; "><a href="me.html" style="text-align: right;">About Me</a></div>
                 <div style="width: 45%"><h1>Hantama's Blog</h1></div>
@@ -17,24 +16,18 @@
                     <li><a href="#">About Me</a></li>
                 </ul>
             </header>
+        <div class="container">
             <main id="main">
-                
             </main>
         </div>
         <footer>
 
         </footer>
         <script>
-            let renderedString=""
-            let index=0
-            postList.forEach(post => {
-                renderedString+="<a href='post.html?id="+
-                                index+"'><div  class='postls'>"+
-                                post.getTitle()+""+
-                                post.getDescription()+"</div></a>"
-                index++
-            });
-            document.getElementById("main").innerHTML=renderedString//ReactNative.getPost()
+            const urlParams = new URLSearchParams(window.location.search);
+            const myParam = urlParams.get('id');
+            let rederedPost=postList[parseInt(myParam)]
+            document.getElementById("main").innerHTML=rederedPost.getPost()
         </script>
     </body>
 </html>
