--- a/index.html
+++ b/index.html
@@ -1,53 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <script src="script/post.js"></script>
-        <script src="mypost/mypost.js"></script>
-        <link href="style/mycss.css" rel="stylesheet" type="text/css">
-        <title>Hantexts</title>
-    </head>
-    <body>
-        <div class="container">
-            <header>
-                <div id="me" style=""><a href="me.html" style="text-align: right;">About Me</a></div>
-                <div style="width: 45%"><h1>Hantama's Blog</h1></div>
-                
-                <ul>
-                    <li><a class="active" href="#">Home</a></li>
-                    <div class="dropdown">
-                            <button class="dropbtn">Category List
-                            </button>
-                            <div id="categories" class="dropdown-content">
-                              <a href="#">Link 1</a>
-                              <a href="#">Link 2</a>
-                              <a href="#">Link 3</a>
-                            </div>
-                          </div> 
-                </ul>
-            </header>
-            <main id="main">
-                
-            </main>
-        </div>
-        <footer>
-
-        </footer>
-        <script>
-            let renderedString=""
-            let index=0
-            categoryList.forEach(category => {
-                renderedString+="<a href='list-by-category.html?category="+category+"'>"+category+"</a>"
-            });
-            document.getElementById('categories').innerHTML=renderedString
-            renderedString="<h1 style='text-align:Left; margin-top:10px; padding-bottom:10px; border-bottom:4px solid #000000; width:auto;'>Recent Posts</h1>"
-            postList.forEach(post => {
-                renderedString+="<a href='post.html?id="+
-                                index+"'><div  class='postls'>"+
-                                post.getTitle()+""+
-                                post.getDescription()+"</div></a>"
-                index++
-            });
-            document.getElementById("main").innerHTML=renderedString//ReactNative.getPost()
-        </script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Ainun</title>
+</head>
+<body style="text-align: center; width: 100%; background-color: #ff96e3; margin-top: 100px;">
+    <div>
+        <img height="100px" width="100px" src="assets/img/love.png" alt="">
+        <h1>I love You Nurul Ainun</h1>
+        <p>- Handryan Pratama</p>
+    </div>
+</body>
 </html>
