--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Ainun</title>
+    <title>Ini web saya</title>
 </head>
-<body style="text-align: center; width: 100%; background-color: #ff96e3; margin-top: 100px;">
-    <div>
-        <img height="100px" width="100px" src="assets/img/love.png" alt="">
-        <h1>I love You Nurul Ainun</h1>
-        <p>- Handryan Pratama</p>
-    </div>
+<body>
+    <h1>Ini judul</h1>
+    <table style="border: 1px solid red; background-color: red;">
+        <tr>
+            <td>Baris 1 kolom 1</td>
+            <td>Baris 1 kolom 2</td>
+        </tr>
+        <tr>
+            <td>Baris 1 kolom 1</td>
+            <td>Baris 1 kolom 2</td>
+        </tr>
+        <tr>
+            <td>Baris 1 kolom 1</td>
+            <td>Baris 1 kolom 2</td>
+        </tr>
+        <tr>
+            <td>Baris 1 kolom 1</td>
+            <td>Baris 1 kolom 2</td>
+        </tr>
+        <tr>
+            <td>Baris 1 kolom 1</td>
+            <td>Baris 1 kolom 2</td>
+        </tr>
+    </table>
 </body>
 </html>
